# BigBattleBoxUI

./: .gitignore  BattleBoxUI.files  CMakeLists.txt  algokindobject.cpp  algokindobject.h  arduinoconnectionmanager.cpp  arduinoconnectionmanager.h  battleboxmainwindow.cpp  battleboxmainwindow.h  battleboxmainwindow.ui  battleboxphysicalstate.cpp  battleboxphysicalstate.h  battleboxviewmodel.cpp  battleboxviewmodel.h  booleanobject.cpp  booleanobject.h  buttonconfigwidget.cpp  buttonconfigwidget.h  buttonconfigwidget.ui  colorobject.cpp  colorobject.h  confetti.qml  confettigi.cpp  confettigi.h  configurationcontentwidget.cpp  configurationcontentwidget.h  configurationcontentwidget.ui  configurationwidget.cpp  configurationwidget.h  configurationwidget.ui  deathmatchcompletewidget.cpp  deathmatchcompletewidget.h  deathmatchcompletewidget.ui  deathmatchconfig.cpp  deathmatchconfig.h  deathmatchplayerreadymodel.cpp  deathmatchplayerreadymodel.h  deathmatchrunningclockwidget.cpp  deathmatchrunningclockwidget.h  deathmatchrunningclockwidget.ui  (+57 more)
app_state/: applicationstate.cpp  applicationstate.h  battleboxviewmodel.cpp  battleboxviewmodel.h  deathmatchconfig.cpp  deathmatchconfig.h  deathmatchgamesession.cpp  deathmatchgamesession.h  deathmatchplayerreadymodel.cpp  deathmatchplayerreadymodel.h  deathmatchruntime.cpp  deathmatchruntime.h  playerstatuslights.h  screen.cpp  screen.h  soccerconfig.cpp  soccermatch.cpp  soccerteamready.cpp
app_state/led/: deathmatchledconfiguration.cpp  deathmatchledconfiguration.h  generalledconfiguration.cpp  generalledconfiguration.h  interpolation.cpp  interpolation.h  ledconfiguration.cpp  ledconfiguration.h  ledidleconfiguration.cpp  ledidleconfiguration.h  playerreadyledlightconfiguration.cpp  playerreadyledlightconfiguration.h  winningplayerlightconfiguration.cpp  winningplayerlightconfiguration.h
app_state/led/ledalgoconfig/: blinkconfig.cpp  blinkconfig.h  breathconfig.cpp  breathconfig.h  countdownfillconfig.cpp  countdownfillconfig.h  cylonconfig.cpp  cylonconfig.h  deathmatchledconfiguration.cpp  deathmatchledconfiguration.h  ledalgoconfig.cpp  ledalgoconfig.h  rampupconfig.cpp  rampupconfig.h  solidcolorconfig.cpp  solidcolorconfig.h
physical_state/: arduinoclient.cpp  arduinoclient.h  arduinoconnectionmanager.cpp  arduinoconnectionmanager.h  arduinomessanger.cpp  arduinomessanger.h  battleboxphysicalstate.cpp  battleboxphysicalstate.h  ledcontroller.cpp  ledcontroller.h  ledsettings.cpp  ledsettings.h  physicalplayerstate.cpp  physicalplayerstate.h  physicalrelay.cpp
physical_state/ledalgo/: blink.cpp  blink.h  breath.cpp  breath.h  countdownfill.cpp  countdownfill.h  cylon.cpp  cylon.h  deathmatchplayerready.cpp  deathmatchplayerready.h  ledalgo.cpp  ledalgo.h  lightoff.cpp  lightoff.h  rampup.cpp  rampup.h  solidcolors.cpp  solidcolors.h
qmlproject/: main.qml
qmlproject/cannon/: main.qml
qmlproject/confetti/: main.qml
screens/configuration/: blinkconfigwidget.cpp  blinkconfigwidget.h  blinkconfigwidget.ui  breathconfigwidget.cpp  breathconfigwidget.h  breathconfigwidget.ui  colorselectionwidget.cpp  colorselectionwidget.h  colorselectionwidget.ui  connectionhelper.h  countdownconfigwidget.cpp  countdownconfigwidget.h  countdownconfigwidget.ui  cycledurationconfigwidget.cpp  cycledurationconfigwidget.h  cycledurationconfigwidget.ui  cylonconfigwidget.cpp  cylonconfigwidget.h  cylonconfigwidget.ui  deathmatchconfigledconfigwidget.cpp  deathmatchconfigledconfigwidget.h  deathmatchconfigledconfigwidget.ui  defaultvaluemacros.h  generalledconfigurationwidget.cpp  generalledconfigurationwidget.h  generalledconfigurationwidget.ui  idleledconfigurationwidget.cpp  idleledconfigurationwidget.h  idleledconfigurationwidget.ui  interpolationselectorwidget.cpp  interpolationselectorwidget.h  interpolationselectorwidget.ui  ledcontrolwidget.cpp  ledcontrolwidget.h  ledcontrolwidget.ui  offconfigwidget.cpp  offconfigwidget.h  offconfigwidget.ui  playersreadywidget.cpp  playersreadywidget.h  (+10 more)
widgets/: RangeSlider.cpp  algorithmdropdown.cpp  algorithmdropdown.h  algorithmdropdown.ui  brightnessrangeslider.cpp  brightnessrangeslider.h  brightnessselectionwidget.cpp  brightnessselectionwidget.h  brightnessselectionwidget.ui  countdownpage.cpp  countdownpage.h  countdownpage.ui  defaultrestorablecheckbox.cpp  defaultrestorablecheckbox.h  defaultrestorablecheckbox.ui  defaultrestorablespinbox.cpp  defaultrestorablespinbox.h  defaultrestorablespinbox.ui  rampuppage.cpp  rampuppage.h  rampuppage.ui  solidcolorpage.cpp  solidcolorpage.h  solidcolorpage.ui  unificationdropdownwidget.cpp  unificationdropdownwidget.h  unificationdropdownwidget.ui
